<resources>
    <string name="app_name">CookBook</string>
    <string name="title_activity_show_recipe">Recipe\'s name</string>

    <string name="action_calories_calc">Calorie calculator</string>
    <string name="action_cooktimer">CookTimer</string>
    <string name="action_search">Search</string>

    <string name="action_edit_recipe">Edit the recipe</string>
    <string name="action_share_recipe">Share the recipe</string>
    <string name="action_delete_recipe">Delete the recipe</string>

    <string name="favourite_recipes">Favourite recipes</string>
    <string name="all_recipes">All recipes</string>

    <string name="soups">Soups</string>
    <string name="rice_dishes">Rice dishes</string>
    <string name="meat_dishes">Meat dishes</string>
    <string name="fish_dishes">Fish dishes</string>
    <string name="vegetarian_food">Vegetarian food</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="starters">Starters</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="min">min</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>


    <string name="_min">min:</string>
    <string name="set">Set</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="_00_00">00:00</string>

</resources>
