<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favour"
            android:icon="@drawable/if_favourite"
            android:title="@string/favour" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_recipes"
            android:title="@string/all_recipes" />
        <item
            android:id="@+id/nav_soup"
            android:icon="@drawable/if_soup"
            android:title="@string/soups" />
        <item
            android:id="@+id/nav_rice"
            android:icon="@drawable/if_rice"
            android:title="@string/rice_dishes" />
        <item
            android:id="@+id/nav_meat"
            android:icon="@drawable/if_meat"
            android:title="@string/meat_dishes" />
        <item
            android:id="@+id/nav_fish"
            android:icon="@drawable/if_fish"
            android:title="@string/fish_dishes" />
        <item
            android:id="@+id/nav_vegetarian"
            android:icon="@drawable/if_vegetarian"
            android:title="@string/vegetarian_food" />
        <item
            android:id="@+id/nav_dessert"
            android:icon="@drawable/if_dessert"
            android:title="@string/desserts" />
        <item
            android:id="@+id/nav_drink"
            android:icon="@drawable/if_drink"
            android:title="@string/drinks" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/if_starter"
            android:title="@string/starters" />
    </group>

</menu>