<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.TimerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_min"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/timer_edit_time"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="time" />
    </LinearLayout>

    <Button
        android:id="@+id/timer_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set" />

    <TextView
        android:id="@+id/timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_00_00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <Button
        android:id="@+id/timer_start_pause_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/timer_reset_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />


</LinearLayout>