<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calories_calc"
        android:title="@string/action_calories_calc"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cooktimer"
        android:title="@string/action_cooktimer"
        android:orderInCategory="100"
        app:showAsAction="never" />





</menu>