<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_share_recipe"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="1"
        android:title="@string/action_share_recipe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_recipe"
        android:orderInCategory="2"
        android:title="@string/action_edit_recipe"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_recipe"
        android:orderInCategory="3"
        android:title="@string/action_delete_recipe"
        app:showAsAction="never" />

</menu>